--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.gruasappmoviles"
-        minSdkVersion 19
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -43,6 +43,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.firebaseui:firebase-ui-database:6.0.2'
+
+    implementation 'com.madgag:scpkix-jdk15on:1.47.0.1'
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
 
 apply plugin: 'com.google.gms.google-services'
